Further Updates to Project Description 1-26-15
Updates to Project Description and BibTex file to include Flanner's
collaboration details and associated citations

--- a/MountainSnowpack.bib
+++ b/MountainSnowpack.bib
@@ -1,3 +1,119 @@
+@article{qian2015light,
+  title={Light-absorbing particles in snow and ice: Measurement and modeling of climatic and hydrological impact},
+  author={Qian, Yun and Yasunari, Teppei J and Doherty, Sarah J and Flanner, Mark G and Lau, William KM and Ming, Jing and Wang, Hailong and Wang, Mo and Warren, Stephen G and Zhang, Rudong},
+  journal={Advances in Atmospheric Sciences},
+  volume={32},
+  pages={64--91},
+  year={2015},
+  publisher={Springer}
+}
+
+@article{perket2014diagnosing,
+  title={Diagnosing shortwave cryosphere radiative effect and its 21st century evolution in CESM},
+  author={Perket, Justin and Flanner, Mark G and Kay, Jennifer E},
+  journal={Journal of Geophysical Research: Atmospheres},
+  volume={119},
+  pages={1356--1362},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@article{flanner2013arctic,
+  title={Arctic climate sensitivity to local black carbon},
+  author={Flanner, Mark G},
+  journal={Journal of Geophysical Research: Atmospheres},
+  volume={118},
+  pages={1840--1851},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+@article{sterle2013retention,
+  title={Retention and radiative forcing of black carbon in eastern Sierra Nevada snow},
+  author={Sterle, Kelley M and McConnell, Joseph R and Dozier, Jeff and Edwards, Ross and Flanner, MG},
+  journal={The Cryosphere},
+  volume={7},
+  pages={365--374},
+  year={2013},
+  publisher={Copernicus GmbH}
+}
+
+@article{flanner2012enhanced,
+  title={Enhanced solar energy absorption by internally-mixed black carbon in snow grains},
+  author={Flanner, MG and Liu, Xiaohong and Zhou, Cheng and Penner, Joyce E and Jiao, C},
+  journal={Atmospheric Chemistry and Physics},
+  volume={12},
+  pages={4699--4721},
+  year={2012},
+  publisher={Copernicus GmbH}
+}
+
+@article{lawrence2012ccsm4,
+  title={The CCSM4 land simulation, 1850-2005: Assessment of surface climate and new capabilities},
+  author={Lawrence, David M and Oleson, Keith W and Flanner, Mark G and Fletcher, Christopher G and Lawrence, Peter J and Levis, Samuel and Swenson, Sean C and Bonan, Gordon B},
+  journal={Journal of Climate},
+  volume={25},
+  pages={2240--2260},
+  year={2012}
+}
+
+@article{kuipers2011new,
+  title={A new albedo parameterization for use in climate models over the Antarctic ice sheet},
+  author={Kuipers Munneke, P and Van den Broeke, MR and Lenaerts, JTM and Flanner, MG and Gardner, AS and Van de Berg, WJ},
+  journal={Journal of Geophysical Research: Atmospheres (1984--2012)},
+  volume={116},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{flanner2011radiative,
+  title={Radiative forcing and albedo feedback from the Northern Hemisphere cryosphere between 1979 and 2008},
+  author={Flanner, MG and Shell, KM and Barlage, M and Perovich, DK and Tschudi, MA},
+  journal={Nature Geoscience},
+  volume={4},
+  pages={151--155},
+  year={2011},
+  publisher={Nature Publishing Group}
+}
+
+@article{flanner2009springtime,
+  title={Springtime warming and reduced snow cover from carbonaceous particles},
+  author={Flanner, Mark G and Zender, Charlie S and Hess, PG and Mahowald, Natalie M and Painter, Thomas H and Ramanathan, Veerabhadran and Rasch, PJ},
+  journal={Atmospheric Chemistry and Physics},
+  volume={9},
+  pages={2481--2497},
+  year={2009},
+  publisher={Copernicus GmbH}
+}
+
+@article{mcconnell200720th,
+  title={20th-century industrial black carbon emissions altered arctic climate forcing},
+  author={McConnell, Joseph R and Edwards, Ross and Kok, Gregory L and Flanner, Mark G and Zender, Charles S and Saltzman, Eric S and Banta, J Ryan and Pasteris, Daniel R and Carter, Megan M and Kahl, Jonathan DW},
+  journal={Science},
+  volume={317},
+  pages={1381--1384},
+  year={2007},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{flanner2007present,
+  title={Present-day climate forcing and response from black carbon in snow},
+  author={Flanner, Mark G and Zender, Charles S and Randerson, James T and Rasch, Philip J},
+  journal={Journal of Geophysical Research: Atmospheres (1984--2012)},
+  volume={112},
+  year={2007},
+  publisher={Wiley Online Library}
+}
+
+@article{flanner2006linking,
+  title={Linking snowpack microphysics and albedo evolution},
+  author={Flanner, Mark G and Zender, Charles S},
+  journal={Journal of Geophysical Research: Atmospheres (1984--2012)},
+  volume={111},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+
 @article{pavelsky2012changes,
   title={Changes in orographic precipitation patterns caused by a shift from snow to rain},
   author={Pavelsky, Tamlin M and Sobolowski, Stefan and Kapnick, Sarah B and Barnes, Jason B},
