--- a/Ullrich-MountainSnowpack-ProjectDescription.tex
+++ b/Ullrich-MountainSnowpack-ProjectDescription.tex
@@ -109,9 +109,11 @@ This work is strongly interdisciplinary, tackling the evaluation, development an
 
 The PI and his collaborating team are uniquely positioned to conduct multi-model ensemble intercomparisons of variable-resolution climate model output using a suite of cutting-edge atmospheric models and post-processing tools.  Many relevant tools have been developed by the PI, including the SQuadGen grid generation tool (described in \cite{guba2014viscosity}), the TempestRemap post-processing toolkit \citep{ullrich2015remapping} and the TempestExtremes toolkit for extreme weather detection and characterization \citep{ullrich2015extremes}.
 
-This project will further benefit from PI Ullrich's experience with atmospheric model development  \cite{ullrich2010high, PHLPAURDN2011SPRINGER, ullrich2012operator, ullrich2012mcore, ullrich2014fluxform, guba2014viscosity, ullrich2014understanding, ullrich2014global}, numerical analysis \cite{ullrich2011analysis, ullrich2012considerations} and model evaluation \cite{DCMIP2012TESTCASES, ullrich2014proposed, kent2013dynamical, ullrich2014baroclinic}.  PI Ullrich has been heavily involved with work on variable-resolution modeling \citep{zarzycki2014aquaplanet} and adaptive mesh refinement  \citep{collins2013nonhydrostatic, mccorquodale2014adaptive}. He is heavily involved in national collaborations on climate projects, and is an organizer on a number of sessions and workshops which are related to atmospheric modeling. In addition, he is closely affiliated with ongoing climate research efforts at Lawrence Berkeley National Laboratory (LBNL) and the National Center for Atmospheric Research (NCAR).
+This project will further benefit from PI Ullrich's experience with atmospheric model development  (\cite{ullrich2010high, PHLPAURDN2011SPRINGER, ullrich2012operator, ullrich2012mcore, ullrich2014fluxform, guba2014viscosity, ullrich2014understanding, ullrich2014global}), numerical analysis (\cite{ullrich2011analysis, ullrich2012considerations}) and model evaluation (\cite{DCMIP2012TESTCASES, ullrich2014proposed, kent2013dynamical, ullrich2014baroclinic}).  PI Ullrich has been heavily involved with work on variable-resolution modeling \citep{zarzycki2014aquaplanet} and adaptive mesh refinement  \citep{collins2013nonhydrostatic, mccorquodale2014adaptive}. He is heavily involved in national collaborations on climate projects, and is an organizer on a number of sessions and workshops which are related to atmospheric modeling. In addition, he is closely affiliated with ongoing climate research efforts at Lawrence Berkeley National Laboratory (LBNL) and the National Center for Atmospheric Research (NCAR).
 
 Dr. Shu-Hua Chen (UC Davis) has extensive experience with using WRF for regional atmospheric modeling (\cite{chen2011observing,xu2014coupling, yang2014evaluating, zhang2014development}) and so will be a valuable collaborator towards the completion of this project. She will be assisting with the use of WRF for simulating the snowpack, as well as coupling WRF to the CESM ensemble data.  Chen also has dynamical downscaling experience using the WRF model. Her experience includes using dynamic downscaling data to study variation in precipitation over the Sierra Nevada Mountains and Western Montana (\cite{pan2011influences, silverman2013dynamically}) and the trend of air pollution episodes in California (\cite{zhao2011impactb, zhao2011impacta}) under climate change. The interface between WRF and CESM has been developed and validated in her previous work and will be used in this project.
+
+Dr. Mark Flanner (University of Michigan) has been instrumental in helping to develop and enhance snow processes and radiative impacts within CLM in CESM.  His work lead to the development of the SNICAR subroutine within the newest version of the Snow Hydrology portion of CLM \citep{lawrence2011parameterization,lawrence2012ccsm4}.  He and his team have extensive experience in land surface and cryosphere related climate research including: snowpack microphysics and albedo processes (\cite{flanner2006linking, flanner2011radiative, kuipers2011new}), black carbon deposition and impacts on global radiative budgets (\cite{flanner2007present,mcconnell200720th,flanner2009springtime,flanner2012enhanced,flanner2013arctic,qian2015light}), with an analysis of Sierra Nevada specific impacts (\cite{sterle2013retention}), and canopy-cryosphere interactions (\cite{perket2014diagnosing}).  His team will be instrumental in guiding the UC Davis research group in how to best optimize and run CLM for pointwise comparisons of SNOTEL locations in the western USA. 
 
 %This award will also provide a framework for future variable-resolution intercomparison studies and an improved understanding of hydroclimate effects facing California (and the broader western USA).
 
@@ -206,7 +208,7 @@ CLM (version 4.0) utilizes a grid cell by grid cell specification routine that b
 
 As discussed previously, PFT types and percent cover of PFTs within each vegetated land-unit play a crucial role in shaping snowpack trends. This is because the interaction between the canopy and snowpack are PFT specific for biogeochemical, radiative, and hydrological processes including: interception, throughfall, canopy drip, water removal via transpiration, and optical property interactions based on leaf angle and specific PFT \citep{lawrence2011parameterization}.  Therefore, CLM4 provides a relatively complex representation of snowpack and its biogeophysical interactions within a GCM framework, lending itself well to this study.   A higher resolution dataset for PFT type would have been beneficial for this study, to capitalize on the higher resolution (less than 0.5$^\circ$) VRGCM grids implemented into both CAM5 and CLM4, however none were found.
 
-The parameterizations of snowpack within CESM are based primarily on work done by \citet{anderson1976point}, \citet{jordan1991one}, and \citet{yongjiu1997land}. These parameterizations characterize several important state variables for snowpack including: the mass of water, mass of ice, snowpack layer thickness, temperature profile of the snowpack layer, black carbon and mineral deposition, and snowpack aging and optical properties \citep{lawrence2011parameterization}. Through the characterization of these state variables, in numerically discretized equations, a five layer snow model with dynamic compaction, water transfer, and energy transfer was created \citep{lawrence2011parameterization}, the SNow and Ice Aerosol Radiation (SNICAR) model.  The SNICAR model replaced the CLM3 snow model which was used in the SnowMIP2 intercomparison project.  This has resulted in a much more complete representation of snowpack, and its tendencies, than its predecessor used in SnowMIP2.
+The parameterizations of snowpack within CESM are based primarily on work done by \citet{anderson1976point}, \citet{jordan1991one}, and \citet{yongjiu1997land}. These parameterizations characterize several important state variables for snowpack including: the mass of water, mass of ice, snowpack layer thickness, temperature profile of the snowpack layer, black carbon and mineral deposition, and snowpack aging and optical properties. Through the characterization of these state variables, in numerically discretized equations, a five layer snow model with dynamic compaction, water transfer, and energy transfer was created and later enhanced via the development of the SNow and Ice Aerosol Radiation (SNICAR) model \citep{lawrence2011parameterization}.  The SNICAR enhanced model replaced the CLM3 snow model which was used in the SnowMIP2 intercomparison project \citep{rutter2009SnowMIP2}.  This has resulted in a much more complete representation of snowpack, and its tendencies, than its predecessor used in SnowMIP2.  In addition to the aforementioned, Dr. Mark Flanner's research group (a project collaborator on this proposal) at the University of Michigan have further enhanced the CLM model through the development of a two-phase canopy scheme that has shown substantial improvement in simulated snow hydrology and albedo in vegetated regions.
 
 %\begin{wrapfigure}{r}{2.5in}
 %\centering\includegraphics[width=2.2in]{RinglerGrid.png}
@@ -252,7 +254,7 @@ Using the ensemble of model simulations, snowpack information (seasonally averag
 
 \subsubsection{(T2) Analysis of the Community Land Model}
 
-SNOTEL stations are perhaps the most reliable resource for mountain snowpack measurements, but their distribution and altitude is not representative of the element-averaged values provided by model simulations.  Nonetheless, as a column model, CLM is theoretically capable of assessing snowpack at pointwise locations when driven by model meteorology.  Consequently, towards the goal of evaluating the capability of the model to match observational data, this proposal will assess the ability of CLM to match SNOTEL measurements over the validation period (1980-2005) when driven by both observed meteorology and interpolated meteorology from variable-resolution simulations.  The VRGCM framework allows us to better alleviate the misrepresentation of observed versus modeled altitude and thus gives us an opportunity to better isolate the models ability to simulate variables such as mean snow depth and SWE.  Recently, an intermodel pointwise validation experiment was conducted for SWE in the Rocky Mountains using six land surface models \citep{chen2014modeling}.  This proposal will learn from and build upon this research by using the newest versions of CLM (CLM4.0 and CLM4.5) and analyze different mountain basins (e.g. Sierra Nevada) {\color{red} [More here from Mark Flanner?]}
+SNOTEL stations are perhaps the most reliable resource for mountain snowpack measurements, but their distribution and altitude is not representative of the element-averaged values provided by model simulations.  Nonetheless, as a column model, CLM is theoretically capable of assessing snowpack at pointwise locations when driven by model meteorology.  Consequently, towards the goal of evaluating the capability of the model to match observational data, this proposal will assess the ability of CLM to match SNOTEL measurements over the validation period (1980-2005) when driven by both observed meteorology and interpolated meteorology from variable-resolution simulations.  The VRGCM framework allows us to better alleviate the misrepresentation of observed versus modeled altitude and thus gives us an opportunity to better isolate the models ability to simulate variables such as mean snow depth and SWE.  Recently, an intermodel pointwise validation experiment was conducted for SWE in the Rocky Mountains using six land surface models \citep{chen2014modeling}.  This proposal will learn from and build upon this research by using the newest versions of CLM (CLM4.0 and CLM4.5) and analyze different mountain basins (e.g. Sierra Nevada).  Dr. Mark Flanner's research group has extensive experience in running pointwise versions of CLM and will help guide the research team at UC Davis in running the aforementioned simulations, and provide the source code to the new two-phase canopy scheme that they have developed.  
 
 \subsubsection{(T3) VRGCM Predictive Simulations (2040-2060 and 2080-2100)}
 
