--- a/MountainSnowpack.bib
+++ b/MountainSnowpack.bib
@@ -1,3 +1,12 @@
+@article{lawrence2012ccsm4,
+  title={The CCSM4 land simulation, 1850-2005: Assessment of surface climate and new capabilities},
+  author={Lawrence, David M and Oleson, Keith W and Flanner, Mark G and Fletcher, Christopher G and Lawrence, Peter J and Levis, Samuel and Swenson, Sean C and Bonan, Gordon B},
+  journal={Journal of Climate},
+  volume={25},
+  pages={2240--2260},
+  year={2012}
+}
+
 @article{qian2015light,
   title={Light-absorbing particles in snow and ice: Measurement and modeling of climatic and hydrological impact},
   author={Qian, Yun and Yasunari, Teppei J and Doherty, Sarah J and Flanner, Mark G and Lau, William KM and Ming, Jing and Wang, Hailong and Wang, Mo and Warren, Stephen G and Zhang, Rudong},
@@ -46,15 +55,6 @@
   pages={4699--4721},
   year={2012},
   publisher={Copernicus GmbH}
-}
-
-@article{lawrence2012ccsm4,
-  title={The CCSM4 land simulation, 1850-2005: Assessment of surface climate and new capabilities},
-  author={Lawrence, David M and Oleson, Keith W and Flanner, Mark G and Fletcher, Christopher G and Lawrence, Peter J and Levis, Samuel and Swenson, Sean C and Bonan, Gordon B},
-  journal={Journal of Climate},
-  volume={25},
-  pages={2240--2260},
-  year={2012}
 }
 
 @article{kuipers2011new,
@@ -108,7 +108,7 @@
 @article{flanner2006linking,
   title={Linking snowpack microphysics and albedo evolution},
   author={Flanner, Mark G and Zender, Charles S},
-  journal={Journal of Geophysical Research: Atmospheres (1984--2012)},
+  journal={Journal of Geophysical Research: Atmospheres (1984-2012)},
   volume={111},
   year={2006},
   publisher={Wiley Online Library}
@@ -241,6 +241,7 @@
   journal={Journal of Geophysical Research: Atmospheres},
   year={2014},
   publisher={Wiley Online Library}
+}
 
 @article{serreze1999characteristics,
   title={Characteristics of the western United States snowpack from snowpack telemetry (SNOTEL) data},
