--- a/Ullrich-MountainSnowpack-ProjectDescription.tex
+++ b/Ullrich-MountainSnowpack-ProjectDescription.tex
@@ -25,7 +25,7 @@
 \evensidemargin 0cm
 
 \parindent 0cm
-\parskip 0.5cm
+\parskip 0.45cm
 
 \usepackage{fancyhdr}
 \pagestyle{plain}
@@ -33,7 +33,7 @@
 
 \usepackage[margin=1in]{geometry}
 
-\title{\textbf{Understanding Hydroclimatic Trends in 21st Century Western US Mountain Snowpack using Variable-Resolution Global Climate Models}}
+%\title{\textbf{Understanding Hydroclimatic Trends in 21st Century Western US Mountain Snowpack using Variable-Resolution Global Climate Models}}
 
 %\author{Dr. Paul Ullrich (PI)}
 \date{ }
@@ -41,28 +41,28 @@
 \begin{document}
 
 
-\maketitle
+%\maketitle
 
 %\tableofcontents
 %\newpage
 
 \section{Project Description}
 \subsection{Background and Summary}
-The next century will see unprecedented changes to the climate system. The most well understood trends (such as increasing global surface temperature) are of a broad global nature and do not necessarily reflect changes on regional scales, which are key for planning on all levels. For this reason, developing a scientific understanding of changing regional climate is an unmet challenge that must be addressed. Regional climate change is particularly important to California, one of the most environmentally and agriculturally diverse regions in the world. With around two-thirds of California's developed water supply originating from the Sierra Nevada, there is growing concern that climate change will directly alter this natural reservoir of water.  The primary source of freshwater from this region comes in the form of winter snowpack.  As global temperatures rise, snowpack is expected to decline dramatically and melt earlier in the season.  These two factors will assuredly stem late summer water flow that is integral to maintaining agricultural, environmental, and municipal water needs.  Modeling snowpack accurately requires the need for high model resolution to represent large-scale and convective snow systems, topography (with resulting orographic forcing and snow line representation), and the overall fractal nature of snow cover extent and depth. To address our understanding of these features, this proposal advances the use of a next generation modeling tool to better understand regional climate change and its effect on snowpack in California and the broader western USA.
+The next century will see unprecedented changes to the climate system. The most well understood trends are of a broad global nature and aren't always characteristic of regional scales, which are key for planning on all levels. Thus, developing a scientific understanding of changing regional climate is a pressing unmet challenge. Regional climate change is particularly important to California where two-thirds of the water supply originates from the Sierra Nevada.  Growing concern is that climate change will directly alter this natural store of water, primarily supplied by  winter snowpack.  As global temperatures rise, snowpack is expected to decline dramatically and melt earlier in the season.  These two factors will stem late summer water flow which is integral to sustaining all stakeholders water needs.  Modeling snowpack accurately requires the need for high model resolution to represent large-scale, convective, and orographically forced systems and the fractal nature of snow cover extent and depth. To address our understanding of these features, this proposal advances the use of a next generation modeling tool to better understand regional climate change and its effect on snowpack in California and the broader western USA.
 \\\\
-The \textbf{central objective} of this work is to better understand how climate change will affect water resources in California and the western USA, specifically water associated with mountain snowpack.  We postulate that although global climate change will not lead to a significant change in total precipitation throughout the western states, this region will see shifts in precipitation storage due to changes in precipitation timing, spatial distribution and type, with a steady decline in winter snowpack, especially in lower elevation basins.  The magnitude and extent of these changes remains a key question.  In order to address this, our work will utilize a multitude of climate model, observational, and reanalysis datasets to provide a comprehensive assessment of how water resources are changing.  We recognize that quite a few studies to date have utilized regional and global climate models to address the aforementioned water security concerns, however a unique strength and theme of this proposal is the use of \textbf{variable-resolution global climate models (VRGCMs)}, which have the capacity to achieve high spatial resolution over a limited-area region.  The major benefits of this framework is the ability to dynamically simulate global circulations (eliminating bias from conventional boundary conditions), represent features such as topography and key teleconnection features (e.g. atmospheric rivers) in a much more resolved manner, and do so in a computationally cost efficient manner that lends itself to smaller server allocation research ($<$100 nodes). 
+The \textbf{central objective} of this work is to better understand how climate change will affect water resources in California and the western USA, with a focus on mountain snowpack.  We postulate that although global climate change will not lead to a significant change in total precipitation throughout the western states, this region will see shifts in precipitation storage due to changes in precipitation timing, spatial distribution and type, with a steady decline in winter snowpack, especially in lower elevation basins.  The magnitude and extent of these changes remains a key question.  To address this, our work will utilize a multitude of climate model, observational, and reanalysis datasets to provide a comprehensive assessment of how water resources are changing.  A unique strength and theme of this proposal is the use of \textbf{variable-resolution global climate models (VRGCMs)}, which have the capacity to achieve high spatial resolution over a limited-area region.  The major benefits of this framework is the ability to dynamically simulate global circulations (eliminating bias from conventional boundary conditions), better represent features such as topography and key hydroclimate teleconnections (e.g. atmospheric rivers), and all in a computationally cost efficient manner that lends itself to smaller server research ($<$100 nodes). 
 \\\\
 The key \textbf{scientific questions} that will be addressed by this proposal are as follows:
 
 \vspace{-0.4cm}
 \begin{itemize}
-\item[(Q1)] How accurately do VRGCMs represent the timing of snowfall?  How accurately do VRGCMs represent the spatial distribution, depth, total Snow Water Equivalent (SWE) and melt rate of snowpack throughout the western US?  How sensitive are these indicators to the underlying grid resolution?
+\item[(Q1)] Can VRGCMs provide added value to the cryosphere community by representing snowfall timing and the spatial distribution, depth, total Snow Water Equivalent (SWE) and melt rate of snowpack in the Sierra Nevada and broader western US?  How sensitive are these indicators to the underlying grid resolution?
 
-\item[(Q2)] Quantitatively, how will west coast mountain snowpack (both total snowpack and on the scale of specific basins) be affected by future climate?  How will interannual variability be affected?
+\item[(Q2)] Quantitatively, how will west coast mountain snowpack (both total and basin scale) be affected by future climate?  How will interannual variability be affected?
 
 \item[(Q3)] How will the spatial distribution of mountain snowpack change in response to anticipated global changes in general circulation?
 
-\item[(Q4)] How will atmospheric rivers respond to anticipated changes in circulation, and how will these changes affect the spatial distribution and total accumulation of mountain snowpack?
+\item[(Q4)] How will atmospheric rivers respond to anticipated changes in circulation?  How will these changes affect the spatial distribution and total accumulation of mountain snowpack?
 \end{itemize}
 
 \noindent The \textbf{central hypotheses} for this proposal are:
@@ -113,7 +113,7 @@ This project will further benefit from PI Ullrich's experience with atmospheric 
 
 Dr. Shu-Hua Chen (UC Davis) has extensive experience with using WRF for regional atmospheric modeling (\cite{chen2011observing,xu2014coupling, yang2014evaluating, zhang2014development}) and so will be a valuable collaborator towards the completion of this project. She will be assisting with the use of WRF for simulating the snowpack, as well as coupling WRF to the CESM ensemble data.  Chen also has dynamical downscaling experience using the WRF model. Her experience includes using dynamic downscaling data to study variation in precipitation over the Sierra Nevada Mountains and Western Montana (\cite{pan2011influences, silverman2013dynamically}) and the trend of air pollution episodes in California (\cite{zhao2011impactb, zhao2011impacta}) under climate change. The interface between WRF and CESM has been developed and validated in her previous work and will be used in this project.
 
-Dr. Mark Flanner (University of Michigan) has been instrumental in helping to develop and enhance snow processes and radiative impacts within CLM in CESM.  His work lead to the development of the SNICAR subroutine within the newest version of the Snow Hydrology portion of CLM \citep{lawrence2011parameterization,lawrence2012ccsm4}.  He and his team have extensive experience in land surface and cryosphere related climate research including: snowpack microphysics and albedo processes (\cite{flanner2006linking, flanner2011radiative, kuipers2011new}), black carbon deposition and impacts on global radiative budgets (\cite{flanner2007present,mcconnell200720th,flanner2009springtime,flanner2012enhanced,flanner2013arctic,qian2015light}), with an analysis of Sierra Nevada specific impacts (\cite{sterle2013retention}), and canopy-cryosphere interactions (\cite{perket2014diagnosing}).  His team will be instrumental in guiding the UC Davis research group in how to best optimize and run CLM for pointwise comparisons of SNOTEL locations in the western USA. 
+Dr. Mark Flanner (University of Michigan) has been instrumental in helping to develop and enhance snow processes and radiative impacts in climate modeling (especially within CLM in CESM).  His work lead to the development of the SNICAR subroutine within the snow hydrology portion of CLM \citep{lawrence2011parameterization,lawrence2012ccsm4}.  He and his team have extensive experience in land surface and cryosphere related climate research including: snowpack microphysics and albedo processes (\cite{flanner2006linking, flanner2011radiative, kuipers2011new}), black carbon deposition and impacts on global radiative budgets (\cite{flanner2007present,mcconnell200720th,flanner2009springtime,flanner2012enhanced,flanner2013arctic,qian2015light}), with an analysis of Sierra Nevada specific impacts (\cite{sterle2013retention}), and canopy-cryosphere interactions (\cite{perket2014diagnosing}).  His team will be instrumental in guiding the UC Davis research group in how to best optimize and run CLM for pointwise comparisons to SNOTEL locations in the western USA. 
 
 %This award will also provide a framework for future variable-resolution intercomparison studies and an improved understanding of hydroclimate effects facing California (and the broader western USA).
 
@@ -159,7 +159,7 @@ Dataset & Snowpack  Product & Spatial  Resolution & Temporal Resolution \\
 \end{center}
 \end{table*}
 
-The Canadian Meteorological Centre (CMC) SNOWDP dataset is comprised of surface synoptic observations and meteorological aviation reports from the World Meteorological Organization’s information system.  CMC derives SWE values using the aforementioned SNOWDP measurements and look-up tables for snow density values \citep{brown2003gridded}.  The DAYMET dataset provides SWE estimations from interpolated meteorological stations.  The interpolated station data is then extrapolated, using a truncated Guassian weighting filter, to create a high resolution gridded output \citep{thornton2012daymet}.  The Moderate Resolution Imaging Spectroradiometer (MODIS) satellite dataset provides SNOWC using a snow mapping algorithm with a Normalized Difference Snow Index (NDSI) \citep{salomonson2006development}.  The NDSI is used to distinguish between snow and other features (such as cloud cover) by using visible and short wave near IR spectral bands \citep{salomonson2006development}.  The SNOwpack TELemetry (SNOTEL) in situ dataset is comprised of 24 automated observational stations spread throughout the Sierra Nevada mountain range measuring SNOWDP and SWE \citep{serreze1999characteristics}.  The areal extent of the SNOTEL stations range from 38.07$^{o}$ to 42.99$^{o}$ latitude by -120.79$^{o}$ to -119.23$^{o}$ with an average elevation of 2343.45 meters.  In addition to maintaining the SNOTEL automated station dataset, the Natural Resources Conservation Service (NRCS) also takes in situ snow course measurements of SNOWDP and SWE by trained observers at 32 permanent sites.  The measurements are taken during the first of every month in January through May along a 305 meter long transect line, usually in small meadow areas, with an average elevation of 2293.01 meters.  The North American Regional Reanalysis (NARR) dataset provides monthly averaged SNOWDP and SNOWC output variables using a high resolution atmospheric model (Eta Model) forced by a Regional Data Assimilation System (RDAS) \citep{mesinger2006north}.  The other reanalysis dataset (NCEP - CFSV2) that will be used is a recently updated (2013) version of its predecessor (2004).  The NCEP dataset provides improved two meter surface temperature, MJO, and SST forecasts while upgrading overall performance in seasonal/subseasonal forecasting results, compared to its predecessor \citep{saha2014ncep}. NCEP has also been advised for use by decision makers in the water management and agricultural fields \citep{saha2014ncep}.  Two 0.25$^\circ$ uniform resolution (spectral element and finite-volume dynamical cores) CESM datasets will be used to intercompare with the VRGCM simulations too.  These two simulations were conducted by a team at Lawrence Berkeley National Laboratories (LBNL). To provide added benefit to the proposal, we will compare the VRGCM simulations to a pair of regional climate model (RCM) simulations too.  A pair of simulations will be conducted at UC Davis using an (out of the box) version (V3.5.1) of the Weather Research and Forecasting (WRF) model, a widely used RCM.  The simulations will use a multi-resolution domain with a coarse resolution of 27km and a finer resolution domain of 9km situated over the western USA (centered on the Sierra Nevada).  Both WRF domains provide SWE, SNOWDP, and SNOWC output variables.
+The Canadian Meteorological Centre (CMC) SNOWDP dataset is comprised of surface synoptic observations and meteorological aviation reports from the World Meteorological Organization’s information system.  CMC derives SWE values using the aforementioned SNOWDP measurements and look-up tables for snow density values \citep{brown2003gridded}.  The DAYMET dataset provides SWE estimations from interpolated meteorological stations.  The interpolated station data is then extrapolated, using a truncated Guassian weighting filter, to create a high resolution gridded output \citep{thornton2012daymet}.  The Moderate Resolution Imaging Spectroradiometer (MODIS) satellite dataset provides SNOWC using a snow mapping algorithm with a Normalized Difference Snow Index (NDSI) \citep{salomonson2006development}.  The NDSI is used to distinguish between snow and other features (such as cloud cover) by using visible and short wave near IR spectral bands \citep{salomonson2006development}.  The SNOwpack TELemetry (SNOTEL) in situ dataset is comprised of 24 automated observational stations spread throughout the Sierra Nevada mountain range measuring SNOWDP and SWE \citep{serreze1999characteristics}.  The areal extent of the SNOTEL stations range from 38.07$^\circ$ to 42.99$^\circ$ latitude by -120.79$^\circ$ to -119.23$^\circ$ with an average elevation of 2343.45 meters.  In addition to maintaining the SNOTEL automated station dataset, the Natural Resources Conservation Service (NRCS) also takes in situ snow course measurements of SNOWDP and SWE by trained observers at 32 permanent sites.  The measurements are taken during the first of every month in January through May along a 305 meter long transect line, usually in small meadow areas, with an average elevation of 2293.01 meters.  The North American Regional Reanalysis (NARR) dataset provides monthly averaged SNOWDP and SNOWC output variables using a high resolution atmospheric model (Eta Model) forced by a Regional Data Assimilation System (RDAS) \citep{mesinger2006north}.  The other reanalysis dataset (NCEP - CFSV2) that will be used is a recently updated (2013) version of its predecessor (2004).  The NCEP dataset provides improved two meter surface temperature, MJO, and SST forecasts while upgrading overall performance in seasonal/subseasonal forecasting results, compared to its predecessor \citep{saha2014ncep}. NCEP has also been advised for use by decision makers in the water management and agricultural fields \citep{saha2014ncep}.  Two 0.25$^\circ$ uniform resolution (spectral element and finite-volume dynamical cores) CESM datasets will be used to intercompare with the VRGCM simulations too.  These two simulations were conducted by a team at Lawrence Berkeley National Laboratories (LBNL). To provide added benefit to the proposal, we will compare the VRGCM simulations to a pair of regional climate model (RCM) simulations too.  A pair of simulations will be conducted at UC Davis using an (out of the box) version (V3.5.1) of the Weather Research and Forecasting (WRF) model, a widely used RCM.  The simulations will use a multi-resolution domain with a coarse resolution of 27km and a finer resolution domain of 9km situated over the western USA (centered on the Sierra Nevada).  Both WRF domains provide SWE, SNOWDP, and SNOWC output variables.
 
 \subsubsection{Variable-Resolution Global Climate Modeling (VRGCM)}
 
@@ -169,7 +169,7 @@ The spectral element method has several important properties including parallel 
 
 The adoption of mesh refinement in the global atmospheric modeling community is fairly recent, although a number of major modeling centers are currently pushing this capability to operational general circulation models \cite{skamarock2012mpas, LMHSJL2013MWR, CMZCJMAT2013MWR, mccorquodale2014adaptive}.   Nonetheless, static mesh refinement has been demonstrated to be effective for operational modeling of tropical cyclones \cite{zarzycki2014multidecadal, zarzycki2014using}, large-scale weather systems \cite{rauscher2014impact} and regional climate \cite{rauscher2013exploring, zarzycki2014aquaplanet}.
 
-Two of the meshes that we will use are depicted in Figure \ref{fig:CESMVarResMeshes}, which shows smooth refinement over North America from a global resolution of 1.0$^\circ$ to a refined region with 0.25$^{o}$ (right) and 0.125$^{o}$ (left) grid spacing over the US west coast.  We have also implemented support for variable-resolution grids into the land surface model of CESM (CLM).  This modification greatly improves model performance by the reducing computational overhead needed for remapping between atmospheric and land model grids.  Figure \ref{f3} shows a clear improvement in the representation of topographic features at higher resolutions.  Both the Sierra Nevada mountain range and California's central valley do not appear in the uniform 1 degree simulations.  Preliminary simulations have been conducted over the period 1980-1986 to validate the model is correctly capturing observed precipitation and snow water equivalent (depicted in figures \ref{fig:VarResPrecipitation} and \ref{fig:VarResSWE}).  The model performs exceptionally well, exhibiting very close visual agreement with observational datasets for both fields, and showing the benefit of enhanced topographic resolution.
+Two of the meshes that we will use are depicted in Figure \ref{fig:CESMVarResMeshes}, which shows smooth refinement over North America from a global resolution of 1.0$^\circ$ to a refined region with 0.25$^\circ$ (right) and 0.125$^\circ$ (left) grid spacing over the US west coast.  We have also implemented support for variable-resolution grids into the land surface model of CESM (CLM).  This modification greatly improves model performance by the reducing computational overhead needed for remapping between atmospheric and land model grids.  Figure \ref{f3} shows a clear improvement in the representation of topographic features at higher resolutions.  Both the Sierra Nevada mountain range and California's central valley do not appear in the uniform 1 degree simulations.  Preliminary simulations have been conducted over the period 1980-1986 to validate the model is correctly capturing observed precipitation and snow water equivalent (depicted in figures \ref{fig:VarResPrecipitation} and \ref{fig:VarResSWE}).  The model performs exceptionally well, exhibiting very close visual agreement with observational datasets for both fields, and showing the benefit of enhanced topographic resolution.
 
 %  There have been recent modeling efforts using variable-resolution support in CAM-SE including both short-term weather forecasting and longer-term climate forecasting, with an interest in obtaining hurricane counts in the Atlantic basin \citep{zarzycki2014using}.
 
@@ -177,7 +177,7 @@ Two of the meshes that we will use are depicted in Figure \ref{fig:CESMVarResMes
 \begin{figure}
   \begin{center}
   \includegraphics[width=0.75\textwidth]{14kmand28kmgrids}
-  \caption{The two variable-resolution Global Climate Model (VRGCM) grids (14km, left, and 28km, right) implemented into the Community Earth System Model (CESM) for this study.  Both grids base resolution are 1$^{o}$ cubed-sphere.  Over the western USA, a halving of resolution in each distinct domain region occurs with the inner most domain featuring a 14km resolution (left) and 28km resolution (right).} \label{fig:CESMVarResMeshes}
+  \caption{The two variable-resolution Global Climate Model (VRGCM) grids (14km, left, and 28km, right) implemented into the Community Earth System Model (CESM) for this study.  Both grids base resolution are 1$^\circ$ cubed-sphere.  Over the western USA, a halving of resolution in each distinct domain region occurs with the inner most domain featuring a 14km resolution (left) and 28km resolution (right).} \label{fig:CESMVarResMeshes}
   \end{center}
 \end{figure}
 
@@ -204,9 +204,9 @@ Two of the meshes that we will use are depicted in Figure \ref{fig:CESMVarResMes
 
 As shown by the most recent snow model intercomparison project (SnowMIP2), a comprehensive assessment of 33 snow models with varying complexity and intended development purpose, no model was shown to perform best across a range of discrete locations in the Northern Hemisphere \citep{rutter2009SnowMIP2}.  Further complications arose in the intercomparison project when canopy interactions were assessed as models performed differently with vegetated and non-vegetated environments.  \citet{rutter2009SnowMIP2} found that a key indicator of more optimal performance in a snow model is its ability to characterize vegetation cover, winter temperature characterization, and performance across a multitude of variables (e.g. snow cover, snow depth, and snow water equivalent).
     
-CLM (version 4.0) utilizes a grid cell by grid cell specification routine that breaks each model cell into a unique combination of land unit types including: glacier, lake, urban, vegetated, and wetland \citep{lawrence2011parameterization}.  The vegetated component of the grid cell is further broken down into various soil types which are then characterized by 15 unique, plus non-vegetated, Plant Functional Types (PFTs) \citep{lawrence2011parameterization}. CLM4 PFTs include: five evergreen species and six deciduous species for temperature, boreal, and tropical climates, three grasses for arctic and non-arctic climates (with C-3 and C-4 variations) and a few staple cereal crops \citep{lawrence2011parameterization}.  PFT cover is derived from the Moderate Resolution Imaging Spectroradiometer (MODIS) satellite data at 0.5$^\circ$ resolution with canopy heights for each of the PFTs assumed to be constant and canopy diameters ranging from 0.5 meters (crops, grasses, and shrubs) to 35 meters (trees) \citep{lawrence2011parameterization}.  
+CLM utilizes a grid cell by grid cell specification routine that breaks each model cell into a unique combination of land unit types including: glacier, lake, urban, vegetated, and wetland \citep{lawrence2011parameterization}.  The vegetated component of the grid cell is further broken down into various soil types which are then characterized by 15 unique, plus non-vegetated, Plant Functional Types (PFTs) \citep{lawrence2011parameterization}. CLM4 PFTs include: five evergreen species and six deciduous species for temperature, boreal, and tropical climates, three grasses for arctic and non-arctic climates (with C-3 and C-4 variations) and a few staple cereal crops \citep{lawrence2011parameterization}.  PFT cover is derived from the Moderate Resolution Imaging Spectroradiometer (MODIS) satellite data at 0.5$^\circ$ resolution with canopy heights for each of the PFTs assumed to be constant and canopy diameters ranging from 0.5 meters (crops, grasses, and shrubs) to 35 meters (trees) \citep{lawrence2011parameterization}.  
 
-As discussed previously, PFT types and percent cover of PFTs within each vegetated land-unit play a crucial role in shaping snowpack trends. This is because the interaction between the canopy and snowpack are PFT specific for biogeochemical, radiative, and hydrological processes including: interception, throughfall, canopy drip, water removal via transpiration, and optical property interactions based on leaf angle and specific PFT \citep{lawrence2011parameterization}.  Therefore, CLM4 provides a relatively complex representation of snowpack and its biogeophysical interactions within a GCM framework, lending itself well to this study.   A higher resolution dataset for PFT type would have been beneficial for this study, to capitalize on the higher resolution (less than 0.5$^\circ$) VRGCM grids implemented into both CAM5 and CLM4, however none were found.
+As discussed previously, PFT types and percent cover of PFTs within each vegetated land-unit play a crucial role in shaping snowpack trends. This is because the interaction between the canopy and snowpack are PFT specific for biogeochemical, radiative, and hydrological processes including: interception, throughfall, canopy drip, water removal via transpiration, and optical property interactions based on leaf angle and specific PFT \citep{lawrence2011parameterization}.  Therefore, CLM provides a relatively complex representation of snowpack and its biogeophysical interactions within a GCM framework, lending itself well to this study.   A higher resolution dataset for PFT type would have been beneficial for this study, to capitalize on the higher resolution (less than 0.5$^\circ$) VRGCM grids implemented into both CAM5 and CLM4, however none were found.
 
 The parameterizations of snowpack within CESM are based primarily on work done by \citet{anderson1976point}, \citet{jordan1991one}, and \citet{yongjiu1997land}. These parameterizations characterize several important state variables for snowpack including: the mass of water, mass of ice, snowpack layer thickness, temperature profile of the snowpack layer, black carbon and mineral deposition, and snowpack aging and optical properties. Through the characterization of these state variables, in numerically discretized equations, a five layer snow model with dynamic compaction, water transfer, and energy transfer was created and later enhanced via the development of the SNow and Ice Aerosol Radiation (SNICAR) model \citep{lawrence2011parameterization}.  The SNICAR enhanced model replaced the CLM3 snow model which was used in the SnowMIP2 intercomparison project \citep{rutter2009SnowMIP2}.  This has resulted in a much more complete representation of snowpack, and its tendencies, than its predecessor used in SnowMIP2.  In addition to the aforementioned, Dr. Mark Flanner's research group (a project collaborator on this proposal) at the University of Michigan have further enhanced the CLM model through the development of a two-phase canopy scheme that has shown substantial improvement in simulated snow hydrology and albedo in vegetated regions.
 
@@ -242,7 +242,7 @@ These model outputs will then be compared over the simulation period with all of
 
 \subsubsection{(T1) VRGCM assessment simulations (1980-2005) and tuning}
 
-An analogous approach to section 1.4.1 will now be applied  for  the  CESM  (CAM-SE and CLM4.0) using built-in support for variable-resolutions.  Specifically, these models will be run with a 100km base resolution refined to 14km and 28km regional resolution. For the CESM model a multi-level refined grid, shown in Figure \ref{fig:CESMVarResMeshes}, will be used with three levels of refinement from a background 110km (1$^{o}$) resolution. The region of high resolution will be chosen to closely correspond to the region of refinement for the WRF model.  Sensitivity of the model to topographic smoothing and choice of convective scheme will be assessed.  %One experiment will also examine whether simulation results can be improved by nudging towards the reanalysis data over the duration of the integration.
+An analogous approach to section 1.4.1 will now be applied  for  the  CESM  (CAM-SE and CLM4.0) using built-in support for variable-resolutions.  Specifically, these models will be run with a 100km base resolution refined to 14km and 28km regional resolution. For the CESM model a multi-level refined grid, shown in Figure \ref{fig:CESMVarResMeshes}, will be used with three levels of refinement from a background 110km (1$^\circ$) resolution. The region of high resolution will be chosen to closely correspond to the region of refinement for the WRF model.  Sensitivity of the model to topographic smoothing and choice of convective scheme will be assessed.  %One experiment will also examine whether simulation results can be improved by nudging towards the reanalysis data over the duration of the integration.
 
 Again the assessment period will be 1980-2005, and both models will be driven using global prescribed SSTs (in correspondence with the AMIP protocol).  At least three ensemble members will be used for this assessment. Model results will be compared over the 1980-2005 time frame with snowpack observational products. Further, results from the VRGCMs will be compared against the ensemble WRF simulations. This procedure will again allow quantification of biases associated with the VRGCMs and if any additional tuning is required to produce more realistic simulation results.  Specifically, topographical smoothness has been identified as one substantial source of uncertainty in these simulations, especially for the purposes of computing statistics related to snowpack (Figure \ref{f3}).
 
@@ -294,13 +294,13 @@ This proposal will use automated atmospheric river detection and characterizatio
 
 \subsubsection{(T5) Reporting}
 
-The research team will reach out to boundary organizations such as the UC Davis Policy Institute for Energy, Environment, and the Economy, the California Climate Assessment, the MIT Joint Program on the Science and Policy of Global Change, the Chilean-UC Davis Collaborative Global Change Center, and the UC Life and Innovation Center (all of which the team has personal correspondence with) to share model methods, results, and tools and discuss how the information may be used within a climate policy and/or water management perspective.  Moreover, additional research questions and key management and/or policy hydroclimate metrics will be generated in collaboration with network collaborators, to inform future research avenues.  The establishment of these interdisciplinary communication pathways will be an integral training outcome for the graduate student researcher and enhance both their ability to work across sectors and communicate scientific outcomes in non-technical (yet informative) means.  This project also aims to inform future iterations of the US Climate Assessment by providing an indicator of changes in western snowpack and, consequently, water resources.  Further, the hope is that this project will lead to more scientifically informed political decisions that are made in cooperative understanding with science, rather than today's conventional isolation.
+The research team will reach out to boundary organizations such as the UC Davis Policy Institute for Energy, Environment, and the Economy, the California Climate Assessment, the MIT Joint Program on the Science and Policy of Global Change, the Chilean-UC Davis Collaborative Global Change Center, and the UC Life and Innovation Center (all of which the team has personal correspondence with) to share model methods, results, and tools and discuss how the information may be used within a climate policy and/or water management perspective.  Moreover, key management and/or policy hydroclimate metrics will be generated in our interactions with network collaborators, to inform future research avenues.  The establishment of these interdisciplinary communication pathways will be an integral training outcome for the graduate student researcher by developing their ability to work across sectors and communicate scientific outcomes in non-technical means.  This project also aims to inform future iterations of the US Climate Assessment by providing an indicator of changes in western snowpack and, consequently, water resources.  Further, the hope is that this project will lead to more scientifically informed political decisions that are made in cooperative understanding with science, rather than today's conventional isolation.
 
 %{\color{red} [US Climate assessment?]}
 
 \subsubsection{Plan of Work}
 
-PI Ullrich will be the primary administrator for the project, and will be responsible for managerial and administrative decisions, including planning, scheduling and oversight of research tasks, plus reporting of technical progress. He will be the primary contact on this project and will be the point of engagement for project collaborators and their teams. He will further be responsible for ensuring that sufficient computational resources are available for continued progress on the project. The majority of the requested funds will be used to pay for one full-time Graduate Student Researcher (GSR) who will pursue this research as part of their Ph.D. research. The GSR will be advised full-time by the PI at UC Davis. In addition, funding will be used to reimburse the PI for one month of salary, which will be used to fund a eight percent commitment of effort to support the GSR on this work. The PI and GSR will meet once per week to discuss the progress and status of the project. Milestones for this project are given below:
+PI Ullrich will be the primary administrator for the project, and will be responsible for managerial and administrative decisions, including planning, scheduling and oversight of research tasks, plus reporting of technical progress. He will be the primary contact on this project and will be the point of engagement for project collaborators and their teams. He will further be responsible for ensuring that sufficient computational resources are available for the project. The majority of the requested funds will be used to pay for one full-time Graduate Student Researcher (GSR) who will pursue this research as part of their Ph.D. research. The GSR will be advised full-time by the PI at UC Davis. In addition, funding will be used to reimburse the PI for one month of salary, which will be used to fund a eight percent commitment of effort to support the GSR on this work. The PI and GSR will meet once per week to discuss the progress and status of the project. Milestones for this project are given below:
 
 \begin{tabularx}{\textwidth}{cX}
 \hline
@@ -318,10 +318,6 @@ PI Ullrich will be the primary administrator for the project, and will be respon
 \end{tabularx}
 
 We expect results and research progress will be presented at regular scientific meetings, including meetings of the American Geophysical Union (AGU) and the American Meteorological Society (AMS). This work will also be presented at the CESM annual working group meeting and CESM atmospheric working group meeting. We further anticipate that we will publish at least one peer-reviewed article for each year of the project duration.
-
-\subsubsection{Prior NSF Support}
-
-N/A
 
 \bibliographystyle{ametsoc2014}  
 {\setbox0\vbox{\bibliography{MountainSnowpack}}}
